adaptivedemux: release manifest lock before sending flush stop event

https://bugzilla.gnome.org/show_bug.cgi?id=757337